objects/LAT_ClientKPI__c.object
<CustomObject>
    <fields>
        <fullName>LAT_AccountInAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente Foco</label>
        <referenceTo>LAT_AccountInAction__c</referenceTo>
        <relationshipName>LAT_KPIClients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_ActionKPI__c</fullName>
        <label>Action KPI</label>
        <referenceTo>LAT_ActionKPI__c</referenceTo>
        <relationshipName>LAT_KPIClients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>LAT_ClientName__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + LAT_AccountInAction__r.Id, LAT_AccountInAction__r.LAT_Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente Foco</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Realizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Quantity__c</fullName>
        <label>Quantidade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_TaskName__c</fullName>
        <label>Task Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Task__c</fullName>
        <label>Atividade Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_taskLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+LAT_Task__c, IF(LAT_TaskName__c != &apos;&apos;, LAT_TaskName__c, LAT_TaskName__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Atividade</label>
        <type>Text</type>
    </fields>
    <label>KPI Clientes</label>
    <nameField>
        <label>KPI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Clientes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>